# SourcePilot-AI

./: .env.example  .gitignore  CHANGELOG.md  Install-SourceHero.bat  Install-SourceHero.command  LICENSE  README.md  Start-SourceHero.command  Start-SourcePilot.bat  pyproject.toml
app/: __init__.py  config.py  database.py  main.py  models.py  openai_models.py  schemas.py
app/agent/: __init__.py  graph.py  prompts.py  tools.py
app/ingestion/: __init__.py  base.py  chunking.py  pdf.py  quality.py  rss.py  webpage.py
app/retrieval/: __init__.py  embeddings.py  search.py  semantic.py  vector_store.py
app/services/: __init__.py  briefing.py  captures.py  citations.py  conversations.py  demo.py  library.py  pipeline.py  reports.py  schedules.py  semantic_index.py  synthesis.py  user_settings.py
dashboard/: streamlit_app.py
desktop/: electron-builder.yml  main.js  package-lock.json  package.json
desktop/scripts/: ensure-electron.js  smoke.js
docs/: PROJECT_BRIEF.md
evals/: questions.jsonl  run_eval.py
scripts/: build-runtime.ps1  build-runtime.sh  setup-macos.sh  setup-windows.ps1  start-macos.sh  start-windows.ps1
tests/: conftest.py  test_api_onboarding.py  test_captures.py  test_chunking.py  test_citations.py  test_config_paths.py  test_config_readonly.py  test_dashboard.py  test_dedup.py  test_demo_seed_and_index.py  test_hybrid_retrieval.py  test_ingestion_rss.py  test_library.py  test_pipeline_error_sanitize.py  test_pipeline_paused.py  test_schedules.py  test_settings_dropdown.py  test_synthesis.py
